# selftest

./: .gitignore  CMakeLists.txt
1_reduce/: CMakeLists.txt  warp_reduce.cu
2_histogram/: CMakeLists.txt  histogram.cu
3_gemm/: CMakeLists.txt  gemm.cu  gemm1.cu  gemm2.cu  gemm3.cu  gemm4.cu  gemm5.cu  gemm6.cu
4_ncu/: CMakeLists.txt
